--- a/RWReactivePlayground/Base.lproj/Main.storyboard
+++ b/RWReactivePlayground/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="3Cp-So-Gdc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="3Cp-So-Gdc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -49,9 +49,6 @@
                                 <state key="normal" title="Sign In">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <connections>
-                                    <action selector="signInButtonTouched:" destination="Bku-Il-Wq0" eventType="touchUpInside" id="rmK-Q5-h9D"/>
-                                </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Invalid credentials" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kJD-IT-3Eg">
                                 <rect key="frame" x="45" y="205" width="147" height="21"/>
@@ -66,7 +63,7 @@
                     <navigationItem key="navigationItem" title="Reactive Sign In" id="lQU-W4-diN"/>
                     <connections>
                         <outlet property="passwordTextField" destination="3qt-Tm-QLH" id="Esa-GY-a21"/>
-                        <outlet property="signInButton" destination="TM9-GL-BlB" id="ftN-0b-bPh"/>
+                        <outlet property="signInButton" destination="TM9-GL-BlB" id="z5d-oC-dmP"/>
                         <outlet property="signInFailureText" destination="kJD-IT-3Eg" id="DyU-Hp-sNy"/>
                         <outlet property="usernameTextField" destination="m6l-hW-lH1" id="mYC-Ua-5bu"/>
                         <segue destination="nGw-JE-c69" kind="push" identifier="signInSuccess" id="MQU-45-1M7"/>
